# gnome_project_c

./: io.galvad.gnome_project_c.json  meson.build
data/: io.galvad.gnome_project_c.appdata.xml.in  io.galvad.gnome_project_c.desktop.in  io.galvad.gnome_project_c.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: gnome_project_c-application.c  gnome_project_c-application.h  gnome_project_c-window.c  gnome_project_c-window.h  gnome_project_c-window.ui  gnome_project_c.gresource.xml  main.c  meson.build
